--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/profile.jpg" alt="Miriam Sabot">
+								<img src="images/profile.png" alt="Miriam Sabot">
 							</figure>
 							<h1>Miriam Sabot</h1>
 							<p>Born and raised in <a href="#">Italy</a>.  </p>
