--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<div class="col-md-12 fh5co-counter">
 							<div class="fh5co-number fh5co-left">12</div>
 							<div class="fh5co-text">
-								<h3 class="border-bottom">Years of experience in Muay Thai, Western boxing and K1</h3>
+								<div class="border-bottom">Years of experience in <h3>Muay Thai, Western boxing & K1</h3></div>
 								<br/>
 								<p>My Name is Miriam Sabot, Originally from Gorizia Italy. My background is in sport science and physical education. I have spent the last 4 years living in Chang Mai, Thailand as a professional K1 and Muay Thai fighter. During my time in Thailand I have competed at the highest level in martial arts, fighting locally in Thailand and internationally in Italy, Australia, China and Malaysia.</p>
 								<p>From this experience, I have the skills and knowledge to train or coach Muay Thai or K1 or western boxing. Furthermore, I have in-depth knowledge to condition or prepare athletes for fights or to improve their physical fitness and overall skills.</p>
@@ -237,8 +237,8 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
-						&copy; 2016 Personal Free HTML5 Template. All Rights Reserved. <span class="fh5co-author">
-						Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></span>
+						&copy; 2016 Miriam Sabot. All Rights Reserved. 
+						<span class="fh5co-author">Designed by Sathya Ramkumar</span>
 					</small>
 				</div>
 			</div>
