--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<![endif]-->
 
 	</head>
-	<body style="background-image: url(images/bg_img.jpg);height:100%;">
+	<body style="background-image: url(images/bg_img.jpg);height:400px;">
 	
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
