--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<![endif]-->
 
 	</head>
-	<body style="background-image: url(images/bg_img.jpg);height:400px;">
+	<body style="background-image: url(images/bg_img.jpg);height:200px;">
 	
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
@@ -111,8 +111,9 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2014-Till Date</h2>
-									<p>HongThong Muay Thai gym, Chiang Mai, Thailand</p>
+									<h2>2010</h2>
+									<p>Bachelors of Physical Education, <a href="https://www.uniud.it/">Università degli Studi di Udine, Italy.</a>
+									</p>
 								</div>
 							</div>
 
@@ -121,8 +122,8 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2013-2014</h2>
-									<p>Eagle Gym, Phuket, Thailand</p>
+									<h2>2015</h2>
+									<p>Teaching English as a Foreign Language <br/>TEFL campus Phuket, Thailand</p>
 								</div>
 							</div>
 
@@ -131,8 +132,9 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2013</h2>
-									<p>Suwit Gym, Phuket, Thailand</p>
+									<h2>2011</h2>
+									<p>Thai Traditional Sports and Oil Massage
+									<a href="http://www.watpomassage.com">WatPo Thai Traditional Medical and Massage School.</a> </p>
 								</div>
 							</div>
 							
