--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
 			<ul class="fh5co-tab-menu">
-				<li class="active"><a href="#" data-tab="1"><span class="icon icon-glass"></span><span class="menu-text">Profile</span></a></li>
+				<li class="active"><a href="#" data-tab="1"><span class="icon icon-user"></span><span class="menu-text">Profile</span></a></li>
 				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
-				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
+				<li><a href="#" data-tab="3"><span class="icon icon-spinner"></span><span class="menu-text">Experience</span></a></li>
 				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">Skills</span></a></li>
+				<li><a href="#" data-tab="5"><span class="icon icon-photo"></span><span class="menu-text">Gallery</span></a></li>
+				<li><a href="#" data-tab="6"><span class="icon icon-trophy"></span><span class="menu-text">Achievements</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner text-center">
@@ -209,26 +211,19 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>My current skills level which I strive to improve day after day.</p>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
+							<div class="chart" data-percent="91"><span><strong>Muay Thai</strong>91%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+							<div class="chart" data-percent="93"><span><strong>Boxing</strong>93%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
-						</div>
-
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+							<div class="chart" data-percent="95"><span><strong>K1</strong>95%</span></div>
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
-						</div>
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+							<div class="chart" data-percent="85"><span><strong>Coaching</strong>85%</span></div>
 						</div>
 
 					</div>
@@ -239,8 +234,9 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
-						&copy; 2016 Miriam Sabot. All Rights Reserved. 
-						<span class="fh5co-author">Designed by Sathya Ramkumar</span>
+						&copy; 2016 Miriam Sabot.
+						<p>&quotEveryday is a school day, <strong>Let's Learn together</strong>&quot</p>
+						<p class="fh5co-author">Designed by Sathya Ramkumar</p>
 					</small>
 				</div>
 			</div>
