--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
+	<link href="css/lightbox.css" rel="stylesheet">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -219,7 +220,20 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Few of my moments captured in the lens...</p>
+							<p>Few of my moments captured through the lens...</p>
+								<div>
+									<a class="example-image-link" href="images/img1.jpg" data-lightbox="example-set" >
+										<img class="example-image" src="images/img1_small.jpg" alt=""/>
+									</a>
+									<br/>
+									<a class="example-image-link" href="images/img2.jpg" data-lightbox="example-set" >
+										<img class="example-image" src="images/img2_small.jpg" alt=""/>
+									</a>
+									<br/>
+									<a class="example-image-link" href="images/img3.jpg" data-lightbox="example-set" >
+										<img class="example-image" src="images/img3_small.jpg" alt=""/>
+									</a>							 
+							</div>
 						</div>
 						<br/>
 					</div>
@@ -270,6 +284,7 @@
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
 
+	<script src="js/lightbox.js"></script>
 	</body>
 </html>
 
