--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<![endif]-->
 
 	</head>
-	<body style="background-image: url(images/bg_img.jpg);height:350px;">
+	<body style="background-image: url(images/bg_img.jpg);height:350px;background-color:#000000">
 	
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
