--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 			<ul class="fh5co-tab-menu">
 				<li class="active"><a href="#" data-tab="1"><span class="icon icon-user"></span><span class="menu-text">Profile</span></a></li>
 				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
-				<li><a href="#" data-tab="3"><span class="icon icon-spinner"></span><span class="menu-text">Experience</span></a></li>
+				<li><a href="#" data-tab="3"><span class="icon icon-aperture"></span><span class="menu-text">Experience</span></a></li>
 				<!-- <li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">Skills</span></a></li> -->
-				<li><a href="#" data-tab="4"><span class="icon icon-photo"></span><span class="menu-text">Gallery</span></a></li>
+				<li><a href="#" data-tab="4"><span class="icon icon-camera-retro"></span><span class="menu-text">Gallery</span></a></li>
 				<li><a href="#" data-tab="5"><span class="icon icon-trophy"></span><span class="menu-text">Achievements</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
@@ -150,7 +150,7 @@
 							
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
+									<i class="icon-bullseye"></i>
 								</div>
 								<div class="fh5co-text">
 									<h2>2014-Till Date</h2>
@@ -160,7 +160,7 @@
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
+									<i class="icon-bullseye"></i>
 								</div>
 								<div class="fh5co-text">
 									<h2>2013-2014</h2>
@@ -170,7 +170,7 @@
 
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
+									<i class="icon-bullseye"></i>
 								</div>
 								<div class="fh5co-text">
 									<h2>2013</h2>
@@ -180,7 +180,7 @@
 							
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
+									<i class="icon-bullseye"></i>
 								</div>
 								<div class="fh5co-text">
 									<h2>2006 - 2012</h2>
