--- a/index.html
+++ b/index.html
@@ -225,14 +225,24 @@
 									<a class="example-image-link" href="images/img1.jpg" data-lightbox="example-set" >
 										<img class="example-image" src="images/img1_small.jpg" alt=""/>
 									</a>
-									<br/>
 									<a class="example-image-link" href="images/img2.jpg" data-lightbox="example-set" >
 										<img class="example-image" src="images/img2_small.jpg" alt=""/>
 									</a>
-									<br/>
 									<a class="example-image-link" href="images/img3.jpg" data-lightbox="example-set" >
 										<img class="example-image" src="images/img3_small.jpg" alt=""/>
-									</a>							 
+									</a>	
+									<a class="example-image-link" href="images/img4.jpg" data-lightbox="example-set" >
+										<img class="example-image" src="images/img4_small.jpg" alt=""/>
+									</a>
+									<a class="example-image-link" href="images/img5.jpg" data-lightbox="example-set" >
+										<img class="example-image" src="images/img5_small.jpg" alt=""/>
+									</a>
+									<a class="example-image-link" href="images/img6.jpg" data-lightbox="example-set" >
+										<img class="example-image" src="images/img6_small.jpg" alt=""/>
+									</a>
+									<a class="example-image-link" href="images/img7.jpg" data-lightbox="example-set" >
+										<img class="example-image" src="images/img7_small.jpg" alt=""/>
+									</a>									
 							</div>
 						</div>
 						<br/>
