--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 									<i class="icon-bullseye"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2006 - 2012,
+									<h2>2006 - 2012
 									<span class="label label-warning"><span class="flag-icon flag-icon-it"></span> Italy</span>
 									</h2>
 									<p>Team Satori, Gorizia</p>
@@ -179,7 +179,7 @@
 									<i class="icon-bullseye"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2013,
+									<h2>2013
 									<span class="label label-default"><span class="flag-icon flag-icon-th"></span> Thailand</span>
 									</h2>
 									<p>Suwit Gym, Phuket</p>
@@ -191,7 +191,7 @@
 									<i class="icon-bullseye"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2013-2014,
+									<h2>2013-2014
 									<span class="label label-default"><span class="flag-icon flag-icon-th"></span> Thailand</span>
 									</h2>
 									<p>Eagle Gym, Phuket</p>
@@ -203,7 +203,7 @@
 									<i class="icon-bullseye"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2014-Till Date,
+									<h2>2014-Till Date
 									<span class="label label-default"><span class="flag-icon flag-icon-th"></span> Thailand</span>
 									</h2>
 									<p>HongThong Muay Thai gym, Chiang Mai</p>
@@ -267,6 +267,7 @@
 									</a>	
 									<br/>
 							</div>
+							<br/>
 						</div>
 						<br/>
 					</div>
@@ -284,7 +285,7 @@
 										<i class="icon-star-o"></i>
 									</div>
 									<div class="fh5co-text">
-										<h2>Jul 2016, 
+										<h2>Jul 2016
 										<span class="label label-default"><span class="flag-icon flag-icon-th"></span> Thailand</span>
 										</h2>
 										<p>World Women Muay Thai Championship - Siam Discovery Bangkok. Against Petchapee</p>
@@ -296,7 +297,7 @@
 										<i class="icon-star-o"></i>
 									</div>
 									<div class="fh5co-text">
-										<h2>Apr 2016, 
+										<h2>Apr 2016
 										<span class="label label-warning"><span class="flag-icon flag-icon-cn"></span> China</span>
 										</h2>
 										<p>Kunlun Fight 47 Xining China (K1 style)</p>
@@ -308,7 +309,7 @@
 										<i class="icon-star-o"></i>
 									</div>
 									<div class="fh5co-text">
-										<h2>Dec 2015, 
+										<h2>Dec 2015
 										<span class="label label-info"><span class="flag-icon flag-icon-my"></span> Malaysia</span>
 										</h2> 
 										
@@ -321,7 +322,7 @@
 										<i class="icon-star-o"></i>
 									</div>
 									<div class="fh5co-text">
-										<h2>Oct 2015, 
+										<h2>Oct 2015
 										<span class="label label-primary"><span class="flag-icon flag-icon-au"></span> Australia</span>
 										</h2>
 										<p>Real Hero (31 October 2015) vs Leonie Macks</p>
@@ -333,7 +334,7 @@
 										<i class="icon-star-o"></i>
 									</div>
 									<div class="fh5co-text">
-										<h2>Feb 2015,
+										<h2>Feb 2015
 										<span class="label label-default"><span class="flag-icon flag-icon-th"></span> Thailand</span>
 										</h2>
 										<p>Muay Thai Angels vs Saifaa Suparat. For video <a target="_blank" href="https://www.youtube.com/watch?v=Gbb12wW0ksM&t=20s">Click here ...</a> </p>
@@ -345,7 +346,7 @@
 										<i class="icon-star-o"></i>
 									</div>
 									<div class="fh5co-text">
-										<h2>Dec 2014,
+										<h2>Dec 2014
 										<span class="label label-default"><span class="flag-icon flag-icon-th"></span> Thailand</span>
 										</h2>
 										<p>King's Cup Tournament 2014 (December 2014): <b><i>Won the semifinal</i></b> against Marloes Merza . For video <a target="_blank" href="https://www.youtube.com/watch?v=Dg-eCt72VwQ">Click here ...</a> </p>
@@ -357,7 +358,7 @@
 										<i class="icon-star-o"></i>
 									</div>
 									<div class="fh5co-text">
-										<h2>Oct 2014, 
+										<h2>Oct 2014
 										<span class="label label-default"><span class="flag-icon flag-icon-th"></span> Thailand</span>
 										</h2>
 										<p>Muay Thai Angels, Bangkok against the champion of the tournament of the previous year, Chommanee Taehiran</p>
@@ -369,7 +370,7 @@
 										<i class="icon-star-o"></i>
 									</div>
 									<div class="fh5co-text">
-										<h2>Jun 2014, 
+										<h2>Jun 2014
 										<span class="label label-default"><span class="flag-icon flag-icon-th"></span> Thailand</span>
 										</h2>
 										<p>MBK fight Night in Bangkok</p>
@@ -387,17 +388,18 @@
 		<footer id="fh5co-footer">
 			<div class="row">
 				<ul class="fh5co-social">
-						<li><a href="mailto:sgn.miry@gmail.com"><i class="icon-envelope"></i></a> <i>sgn.miry@gmail.com<i> </li>
+						<li><a target="_blank" href="https://www.linkedin.com/in/miriam-sabot-14339986"><i class="icon-linkedin"></i></a></li>
+						<li><a target="_blank" href="#"><i class="icon-instagram"></i></a></li>
+						<li><a href="mailto:sgn.miry@gmail.com"><i class="icon-envelope"></i></a>  </li>
 						<!-- <li><a href="#"><i class="icon-twitter"></i></a></li> -->
-						<!-- <li><a href="#"><i class="icon-instagram"></i></a></li> -->
-						<!-- <li><a href="#"><i class="icon-google"></i></a></li> -->
-						<!-- <li><a href="#"><i class="icon-linkedin"></i></a></li> -->
+						<!-- <li><a href="#"><i class="icon-google"></i></a></li> -->						
 				</ul>
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
-						&copy; 2016 Miriam Sabot.
-						<p>&quotEveryday is a school day, <strong>Let's Learn together</strong>&quot</p>
-						<p class="fh5co-author">Designed by Sathya Ramkumar</p>
+						<p><b><i>sgn.miry@gmail.com</i></b></p>
+						&copy 2016 Miriam Sabot. 
+						<p>&quotEveryday is a school day, <strong>Let's Learn together!</strong>&quot</p>
+						<p class="fh5co-author">Designed with <i style="color:#811b1b" class="icon-heart"></i> by Sathya Ramkumar, helping your professional journey!</p>
 					</small>
 				</div>
 			</div>
