--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/Profile.png" alt="Miriam Sabot">
+								<img src="images/Profile.png" alt="Miriam Sabot" class="animated pulse" >
 							</figure>
 							<h1>Miriam Sabot</h1>
 							<p>Born and raised in <a href="https://en.wikipedia.org/wiki/Italy">Italy</a>.  </p>
