--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure>
-								<img src="images/Profile.png" alt="Miriam Sabot" class="animated pulse" >
+								<img src="images/Profile.png" alt="Miriam Sabot" class="animated fadeInUp" >
 							</figure>
 							<h1>Miriam Sabot</h1>
 							<p>Born and raised in <a href="https://en.wikipedia.org/wiki/Italy">Italy</a>.  </p>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row animated fadeInDown">
 						<div class="col-md-12 fh5co-counter">
 							<div class="fh5co-number fh5co-left">33</div>
 							<div class="fh5co-text">
@@ -96,9 +96,9 @@
 							</div>
 						</div>
 					</div>
-					<hr/>
+					<hr class="animated fadeInLeft"/>
 					<br/>
-					<div class="row">
+					<div class="row animated fadeInDown">
 						<div class="col-md-12 fh5co-counter">
 							<div class="fh5co-number fh5co-left">12</div>
 							<div class="fh5co-text">
