--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 			</div>
 		</div>
 		<footer id="fh5co-footer">
-			<div class="row">
+			<div class="row animated fadeInDown">
 				<ul class="fh5co-social">
 						<li><a target="_blank" href="https://www.linkedin.com/in/miriam-sabot-14339986"><i class="icon-linkedin"></i></a></li>
 						<li><a target="_blank" href="#"><i class="icon-instagram"></i></a></li>
