--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+	<!-- to make the footer visible after 3 seconds, this gives a good nice elegant flow on loading the document-->
+	<script type="text/javascript">
+	function show() {
+	AB = document.getElementById('fh5co-footer');
+	AB.style.display = 'inline';
+	}
+	setTimeout("show()", 3000);
+	</script>
+	
+	
 	</head>
 	<body style="background-image: url(images/bg_img.jpg);height:350px;background-color:#000000">
 	
@@ -392,8 +402,8 @@
 				</div>
 			</div>
 		</div>
-		<footer id="fh5co-footer">
-			<div class="row animated fadeInDown">
+		<footer id="fh5co-footer" style="display:none">
+			<div class="row">
 				<ul class="fh5co-social">
 						<li><a target="_blank" href="https://www.linkedin.com/in/miriam-sabot-14339986"><i class="icon-linkedin"></i></a></li>
 						<li><a target="_blank" href="#"><i class="icon-instagram"></i></a></li>
