--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
 							</div>
 						</div>
 					</div>
-					<hr class="animated fadeInLeft"/>
+					<br/>
+					<hr class="animated fadeOutLeft" style="margin-bottom:0;margin-top:0;"/>
+					<hr class="animated fadeOutRight" style="margin-bottom:0;margin-top:0;"/>
 					<br/>
 					<div class="row animated fadeInDown">
 						<div class="col-md-12 fh5co-counter">
